<resources>
    <string name="app_name">startEdu</string>
    <string name="login_header">Login</string>
    <string name="input_password">Password</string>
    <string name="input_email">Email</string>
    <string name="register_now">Click to Register</string>
    <string name="login_button">LOGIN</string>
    <string name="register_here_header">Register</string>
    <string name="input_confirm_password">Confirm Password</string>
    <string name="input_name">Name</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="who2whom_desc">
        <item>Jason  invited <![CDATA[<font color="#02BAA7">startEdu</font>]]> to  </item>
        <item>Williams and 3 others registered</item>
        <item>Ram,Shyam and 3 others subscribed to <![CDATA[<font color="#02BAA7">startEdu</font> \'s ]]>  session at SCHOOL</item>
        <item><![CDATA[<font color="#02BAA7">startEdu</font>]]> started to work with Microsoft for empowering entrepreneurs in India</item>
        <item>Sudhanshu collaborated with  Shantanu for a project</item>
        <item> <![CDATA[<font color="#02BAA7">startEdu</font>]]> recruited Aman</item>
    </string-array>
    <string-array name="fromWhom">
        <item> - Delhi Public School , Dwarka  </item>
        <item> - <![CDATA[<font color="#02BAA7">startEdu</font>]]></item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> - App Designer </item>
    </string-array>

    <string-array name="inspire_names">
        <item>Verghese Kurien</item>
        <item>Sachin Bansal</item>
        <item><![CDATA[
        N.R. Narayana<br>Murthy
        ]]></item>

        <item>Prannoy Roy</item>
    </string-array>
    <string-array name="inspire_comapny">
        <item>Amul</item>
        <item>Flipkart</item>
        <item>Infosys</item>
        <item>NDTV</item>
    </string-array>

    <string-array name="inspire_image">
        <item>@mipmap/amul</item>
        <item>@mipmap/flipkart</item>
        <item>@mipmap/infosys</item>
        <item>@mipmap/ndtv</item>
    </string-array>

    <string-array name="field_name">
        <item>Contact Number</item>
        <item>Age</item>
        <item>Associated Company</item>
        <item>Company Website</item>
    </string-array>

</resources>
