<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/register_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/register_here_header"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="helvetica"
                android:hint="@string/input_name"
                android:imeOptions="actionNext"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/email_register_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="helvetica"
                android:hint="@string/input_email"
                android:imeOptions="actionNext"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="helvetica"
                android:hint="@string/input_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_confirm_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingBottom="10dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/confirm_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="helvetica"
                android:hint="@string/input_confirm_password"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            style="@android:style/Widget.Material.Button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:enabled="true"
            android:text="REGISTER"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
</ScrollView>